--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
         </h2>
       </div>
       <div class="row">
+
+        <div class="col-md-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/foto/Jasacekturnitin(1).png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Jasa Cek Turnitin
+              </h5>
+              <div class="price_box">
+                <h6 class="price_heading">
+                  <span>Rp</span> 5.000-30.000
+                </h6>
+                <a href="https://wa.me/6282295991815?text=Halo DK.id saya mau order jasa cek turnitin">
+                  Buy Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-6 col-lg-4">
           <div class="box">
             <div class="img-box">
