--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      WELCOME TO WEB <br>
-                      DesainKitaAja.id
+                      WELCOME TO<br>
+                      DesainKitaAja
                     </h1>
                     <p>
                       Five star quality service at street prices
