--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <link rel="icon" href="images/fav1.png" type="image/gif" />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="desainkitaaja,deka,dk" />
   <meta name="description" content="" />
   <meta name="author" content="" />
 
