--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      WELCOME TO<br>
-                      DesainKitaAja
-                    </h1>
+                      WELCOME TO</h1>
+                      <h5>DesainKitaAja</h5>
                     <p>
                       Five star quality service at street prices
                     </p>
